--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://dd-3.netlify.app/'
 languageCode = 'en-us'
 title = 'Dashboard Deluxe 3'
 disableHugoGeneratorInject = true
+
+[params]
+  description = 'Your centralized hub for quick access to all your favorite websites and resources. Organized by category for easy navigation.'
