--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "scripts": {
         "dev": "hugo server",
         "build": "hugo --gc --minify",
-        "watch": "hugo server --disableFastRender --navigateToChanged"
+        "watch": "hugo server --disableFastRender --navigateToChanged",
+        "deploy": "npx wrangler deploy"
     },
     "dependencies": {
         "@tailwindcss/postcss": "^4.0.1",
