--- a/netlify.toml
+++ b/netlify.toml
@@ -16,4 +16,15 @@
 [[redirects]]
   from = "/*"
   to = "/404.html"
-  status = 404 
+  status = 404
+
+[build.processing]
+  skip_processing = false
+[build.processing.css]
+  bundle = true
+  minify = true
+[build.processing.js]
+  bundle = true
+  minify = true
+[build.processing.images]
+  compress = true 
