Revert "Update wrangler.jsonc"
This reverts commit ddc58cdddcbaa2a75d5a6486e4008a6bf5a26797.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "scripts": {
         "dev": "hugo server",
         "build": "hugo --gc --minify",
-        "watch": "hugo server --disableFastRender --navigateToChanged",
-        "deploy": "npx wrangler deploy"
+        "watch": "hugo server --disableFastRender --navigateToChanged"
     },
     "dependencies": {
         "@tailwindcss/postcss": "^4.0.1",
