--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,15 @@
 {
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "tailwindStylesheet" : "./assets/css/styles.css"
+    "plugins": [
+        "prettier-plugin-tailwindcss",
+        "prettier-plugin-go-template"
+    ],
+    "overrides": [{
+        "files": [
+            "*.html"
+        ],
+        "options": {
+            "parser": "go-template"
+        }
+    }],
+    "tailwindStylesheet": "./assets/css/styles.css"
 }
