--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "postcss": "^8.5.1",
         "postcss-cli": "^11.0.0",
         "prettier": "^3.4.2",
+        "prettier-plugin-go-template": "^0.0.15",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4.0.1"
     }
