--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
         "tailwindcss-v4"
     ],
     "scripts": {
-        "dev": "hugo server",
-        "build": "hugo --gc --minify",
-        "watch": "hugo server --disableFastRender --navigateToChanged"
+        "dev": "hugo server --cleanDestinationDir",
+        "build": "hugo --gc --minify --cleanDestinationDir",
+        "watch": "hugo server --disableFastRender --navigateToChanged --cleanDestinationDir"
     },
     "dependencies": {
-        "@tailwindcss/postcss": "^4.0.1",
+        "@tailwindcss/postcss": "^4.1.0",
         "postcss": "^8.5.1",
         "postcss-cli": "^11.0.0",
         "prettier": "^3.4.2",
         "prettier-plugin-go-template": "^0.0.15",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^4.0.1"
+        "tailwindcss": "^4.1.0"
     }
 }
