--- a/data/dashboard.yaml
+++ b/data/dashboard.yaml
@@ -326,8 +326,8 @@ sections:
     - title: "StreamEast"
       url: "https://the.streameast.app//v86"
       hidden: true
-    - title: "98DH"
-      url: "Tennis Streams"
+    - title: "Tennis Streams"
+      url: "https://98dh.site/"
       hidden: true
     - title: "CricHD"
       url: "https://m.crichd.vip/web007"
