--- a/data/dashboard.yaml
+++ b/data/dashboard.yaml
@@ -329,6 +329,9 @@ sections:
     - title: "Tennis Streams"
       url: "https://98dh.site/"
       hidden: true
+    - title: "Tennistream"
+      url: "https://tennistream.online/"
+      hidden: true
     - title: "Tennis Streams YouTube"
       url: "https://www.youtube.com/@fox-stream-tennis/streams"
       hidden: true
